--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 						<a href="index.html" class="active">首页</a>
 					</li>
 					<li>
-						<a href="">产品中心</a>
+						<a href="productcenter.html">产品中心</a>
 					</li>
 					<li>
 						<a href="">成功案例</a>
