--- a/productcenter.html
+++ b/productcenter.html
@@ -43,7 +43,10 @@
 				</ul>
 			</nav>
 		</header>
-
+<!--banner-->
+		<div class="banner">
+			<img src="images/banner.jpg"/>
+		</div>
 		<!--		微信拓客只需三分钟-->
 		<div class="tookeen">
 			<div>
