--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
 						<a href="">使用帮助</a>
 					</li>
 					<li>
-						<a href="">关于我们</a>
+						<a href="about.html">关于我们</a>
 					</li>
 					<li>
 						<a href="">免费注册</a>
@@ -192,21 +192,21 @@
 				</li>
 				<li>
 					<p><img src="images/briefness02.png"/></p>
-					<p>简单</p>
-					<p>一键操作</p>
-					<p>快速上手，简单明了</p>
+					<p>安全</p>
+					<p>实时审核</p>
+					<p>权威监督时效高、有价值</p>
 				</li>
 				<li>
 					<p><img src="images/briefness03.png"/></p>
-					<p>简单</p>
-					<p>一键操作</p>
-					<p>快速上手，简单明了</p>
+					<p>可靠</p>
+					<p>1000+小时</p>
+					<p>平稳运行稳定可靠</p>
 				</li>
 				<li>
 					<p><img src="images/briefness04.png"/></p>
-					<p>简单</p>
-					<p>一键操作</p>
-					<p>快速上手，简单明了</p>
+					<p>不重叠</p>
+					<p>每周持续更新活动</p>
+					<p>敬请期待</p>
 				</li>
 			</ul>
 		</div>
@@ -260,6 +260,23 @@
 					<p>每日优化，每周更新，每月升级</p>
 				</li>
 			</ul>
+		</div>
+		
+<!--	合作商家	-->
+		<div class="">
+			<p><span></span>他们正在使用商家岛<span></span></p>
+			<div class="">
+				<ul>
+					<li>
+						<div>
+							
+						</div>
+						<div>
+							
+						</div>
+					</li>
+				</ul>
+			</div>
 		</div>
 		<script src="js/jquery-1.12.3.min.js" type="text/javascript" charset="utf-8"></script>
 		<script src="js/index.js" type="text/javascript" charset="utf-8"></script>
