--- a/productcenter.html
+++ b/productcenter.html
@@ -35,7 +35,7 @@
 						<a href="">使用帮助</a>
 					</li>
 					<li>
-						<a href="">关于我们</a>
+						<a href="about.html">关于我们</a>
 					</li>
 					<li>
 						<a href="">免费注册</a>
