--- a/about.html
+++ b/about.html
@@ -49,7 +49,7 @@
 			</div>
 			<div class="official">
 				<p>
-					北京三五三六网络科技有限公司旗下的一套全国领先的微信营销工具，所创新的支持手机即做即发模式，大大提高商家使用便捷性，提高效率，得到一致认可，被业内同行争相模仿。
+					进好店是北京三五三六网络科技有限公司旗下的一套全国领先的微信营销工具，所创新的支持手机即做即发模式，大大提高商家使用便捷性，提高效率，得到一致认可，被业内同行争相模仿。
 				</p>
 				<p>
 					使用进好店软件，招生、吸客、引流、传播，不再是难题，轻松实现微信推广、朋友圈营销，使用砍价活动、拼团活动、助力活动等微信活动，实现推广效果。
