--- a/productcenter.html
+++ b/productcenter.html
@@ -43,9 +43,9 @@
 				</ul>
 			</nav>
 		</header>
-<!--banner-->
+		<!--banner-->
 		<div class="banner">
-			<img src="images/banner.jpg"/>
+			<img src="images/banner.jpg" />
 		</div>
 		<!--		微信拓客只需三分钟-->
 		<div class="tookeen">
@@ -85,22 +85,18 @@
 				<li>
 					<p><img src="images/period02.png" /></p>
 					<p>用户复购</p>
-					<p>
-						参与砍价、红包、拼团活动有好礼</p>
-					<p>通过线上营销活动促进用户进行线下消费</p>
-					<p>定期对新、老用户进行回访沟通</p>
-					<p>并实时分析挖掘用户需求，引起用户情感共鸣</p>
+					<p>通过精准大数据分析，帮助商家分析找出用户营</p>
+					<p>销的最佳时机、聚焦忠诚的用户，准确定位营销的</p>
+					<p>重点人群，进行个性化促销，提升转化效率</p>
+
 
 				</li>
 				<li>
 					<p><img src="images/period03.png" /></p>
 					<p>裂变营销</p>
-					<p>
-						参与砍价、红包、拼团活动有好礼</p>
-					<p>通过线上营销活动促进用户进行线下消费</p>
-					<p>定期对新、老用户进行回访沟通</p>
-					<p>并实时分析挖掘用户需求，引起用户情感共鸣</p>
-
+					<p>借用微信、手Q等社交平台，通过砍价、红包、拼团</p>
+					<p>优惠手段去促进已有的忠实用户去协助宣传门店品牌</p>
+					<p>让每个消费者成为推广员</p>
 				</li>
 			</ul>
 		</div>
@@ -141,6 +137,56 @@
 				</li>
 			</ul>
 		</div>
+
+		<!--		产品中心列表-->
+		<div class="activitys">
+			<ul>
+				<li class="clearlr">
+					<div>
+						<img src="images/dachuanpan.jpg" />
+					</div>
+					<div>
+						<div>
+							<h3>功能详细介绍：</h3>
+							<p>
+								大转盘活动，其主要功能点：抽奖活动背景音乐设置，抽奖活动名称设置，抽奖活动时间设置，抽奖活动规则设置， 抽奖活动奖品设置，抽奖活动兑奖设置，参与抽奖顾客信息收集分析，中奖概率计算设置，上传店铺图片、上传店铺视频宣传等
+							</p>
+						</div>
+						<div>
+							<h3>抽奖活动适合：</h3>
+							<p>幸运大转盘玩法比较适合商家促销，尤其各类门店、餐饮、培训、超市商家产品促销
+ 活动是非常适合的，快消品类似行业也可做类似的软件来做活动，可以帮助商家引导
+ 更多用户达到吸引消费者来消费的目的。
+</p>
+						</div>
+					</div>
+					<div>
+						<img src="images/erweima.jpg" />
+					</div>
+				</li>
+				<li class="clearlr">
+					<div>
+						<img src="images/fkkj.jpg" />
+					</div>
+					<div>
+						<div>
+							<h3>功能详细介绍：</h3>
+							<p> 砍价活动，其主要功能点：背景音乐设置，砍价名称自定义，砍价力度设置（原价、最低价、几刀砍完、参与者自己砍价等），砍价时间自定义设置，商家门店相册上传，商家门店视频宣传，参与砍价数据收集并分析（参与人数、助砍人数、转发人数、访问量、砍价排行、兑换记录）。</p>
+						</div>
+						<div>
+							<h3>砍价活动适合：</h3>
+							<p>
+								砍价适合劲爆推广，消费者享受低价，商家达到爆炸式的广告效应，以快速、互动、即时沟通模式、真实、精确、强大的数据库分析、挖掘消费者的消费潜能，从而使消费者和商家到达双赢局面
+							</p>
+						</div>
+					</div>
+					<div>
+						<img src="images/erweima.jpg" />
+					</div>
+				</li>
+			</ul>
+		</div>
+
 		<script src="js/jquery-1.12.3.min.js" type="text/javascript" charset="utf-8"></script>
 		<script src="js/index.js" type="text/javascript" charset="utf-8"></script>
 	</body>
