--- a/index.html
+++ b/index.html
@@ -264,7 +264,7 @@
 
 		<!--	合作商家	-->
 		<div class="consociation">
-			<p><span></span>他们正在使用商家岛<span></span></p>
+			<p><span></span>他们正在使用进好店<span></span></p>
 			<div class="rolllllll">
 				<ul class="clearlr">
 					<li>
@@ -356,7 +356,7 @@
 						</div>
 					</li>
 
-					<li>
+					<!--<li>
 						<div>
 							<img src="images/consociation/aiyuyoutong.png" />
 
@@ -444,7 +444,7 @@
 						<div>
 							<img src="images/consociation/zuimeizhongguozi.png" />
 						</div>
-					</li>
+					</li>-->
 				</ul>
 			</div>
 
@@ -455,6 +455,51 @@
 
 			</div>
 		</div>
+
+		<!--底部-->
+		<footer>
+	<div class="">
+
+		<ul class="clearlr">
+			<li>
+				<p>
+					<span>7x12小时</span>
+					<span>售后服务</span>
+				</p>
+			</li>
+			<li>
+				<p>
+					<span>免费使用</span>
+					<span>0成本</span>
+				</p>
+			</li>
+			<li>
+				<p>
+					<span>数据采集</span>
+					<span>实时跟踪</span>
+				</p>
+			</li>
+			<li>
+				<p>
+					<span>手机电脑</span>
+					<span>均可操作</span>
+				</p>
+			</li>
+			<li>
+				<p>
+					<span>不限次数</span>
+					<span>每周更新</span>
+				</p>
+			</li>
+		</ul>
+		<div class="">
+			<img src="images/erweima.jpg" />
+		</div>
+		<div class="">
+			<p>&copy;2016-2017&nbsp;&nbsp;&nbsp;&nbsp;进好店 版权所有&nbsp;&nbsp;备案号：京ICP备16037555号-2</p>
+		</div>
+	</div>
+</footer>
 
 		<!--		侧边栏-->
 		<slide>
