--- a/productcenter.html
+++ b/productcenter.html
@@ -89,7 +89,6 @@
 					<p>销的最佳时机、聚焦忠诚的用户，准确定位营销的</p>
 					<p>重点人群，进行个性化促销，提升转化效率</p>
 
-
 				</li>
 				<li>
 					<p><img src="images/period03.png" /></p>
@@ -154,10 +153,8 @@
 						</div>
 						<div>
 							<h3>抽奖活动适合：</h3>
-							<p>幸运大转盘玩法比较适合商家促销，尤其各类门店、餐饮、培训、超市商家产品促销
- 活动是非常适合的，快消品类似行业也可做类似的软件来做活动，可以帮助商家引导
- 更多用户达到吸引消费者来消费的目的。
-</p>
+							<p>幸运大转盘玩法比较适合商家促销，尤其各类门店、餐饮、培训、超市商家产品促销 活动是非常适合的，快消品类似行业也可做类似的软件来做活动，可以帮助商家引导 更多用户达到吸引消费者来消费的目的。
+							</p>
 						</div>
 					</div>
 					<div>
@@ -186,7 +183,49 @@
 				</li>
 			</ul>
 		</div>
+		<footer>
+			<div class="">
 
+				<ul class="clearlr">
+					<li>
+						<p>
+							<span>7x12小时</span>
+							<span>售后服务</span>
+						</p>
+					</li>
+					<li>
+						<p>
+							<span>免费使用</span>
+							<span>0成本</span>
+						</p>
+					</li>
+					<li>
+						<p>
+							<span>数据采集</span>
+							<span>实时跟踪</span>
+						</p>
+					</li>
+					<li>
+						<p>
+							<span>手机电脑</span>
+							<span>均可操作</span>
+						</p>
+					</li>
+					<li>
+						<p>
+							<span>不限次数</span>
+							<span>每周更新</span>
+						</p>
+					</li>
+				</ul>
+				<div class="">
+					<img src="images/erweima.jpg" />
+				</div>
+				<div class="">
+					<p>&copy;2016-2017&nbsp;&nbsp;&nbsp;&nbsp;进好店 版权所有&nbsp;&nbsp;备案号：京ICP备16037555号-2</p>
+				</div>
+			</div>
+		</footer>
 		<script src="js/jquery-1.12.3.min.js" type="text/javascript" charset="utf-8"></script>
 		<script src="js/index.js" type="text/javascript" charset="utf-8"></script>
 	</body>
