--- a/about.html
+++ b/about.html
@@ -35,38 +35,83 @@
 						<a href="">使用帮助</a>
 					</li>
 					<li>
-						<a href="about.html"  class="active">关于我们</a>
+						<a href="about.html" class="active">关于我们</a>
 					</li>
 					<li>
 						<a href="">免费注册</a>
 					</li>
 				</ul>
 			</nav>
-			
-<!--			banner-->
-			<div class="banner">
-				<img src="images/banner (2).jpg"/>
-			</div>
-			<div class="official">
-				<p>
-					进好店是北京三五三六网络科技有限公司旗下的一套全国领先的微信营销工具，所创新的支持手机即做即发模式，大大提高商家使用便捷性，提高效率，得到一致认可，被业内同行争相模仿。
-				</p>
-				<p>
-					使用进好店软件，招生、吸客、引流、传播，不再是难题，轻松实现微信推广、朋友圈营销，使用砍价活动、拼团活动、助力活动等微信活动，实现推广效果。
-				</p>
-				<p>
-					进好店客户覆盖婚庆行业、会务行业、装饰装潢行业、传统媒体行业、房产地产行业、微商推广、传统企业、婚介交友、城市O2O、交通行业、美妆行业、快递行业、医疗行业、行业协会、互联网金融、股票证券、连锁行业、商业综合体、大型商超、商业地产、母婴亲子、摄影行业、学校教育、电商行业、名胜景区、在线旅游、体育运动、文化娱乐等近百个行业。
-				</p>
-				<p>
-					进好店合作客户主要包括包括：中国工商银行、肯德基、耐克、毛源昌眼镜、周大生珠宝、华雅国际大酒店、明牌首饰、老凤祥、中国珠宝、夏加尔美术、老庙黄金、佐卡伊珠宝、新东方教育、宝岛眼镜、新爱婴、奇迹健身、小荷作文、昂立教育、吉的堡、中国电信、中国联通、乐高、哈佛教育等上千个知名品牌及数万商家。
-				</p>
-				<p><span>进好店</span>：www.jinhaodian.com</p>
-				<p>联系电话：400-8696463</p>
-				<p>地址：北京市朝阳区锐创国际B座</p>
-			</div>
-			<script src="js/jquery-1.12.3.min.js" type="text/javascript" charset="utf-8"></script>
-			<script src="js/index.js" type="text/javascript" charset="utf-8"></script>
 		</header>
+
+		<!--			banner-->
+		<div class="banner">
+			<img src="images/banner (2).jpg" />
+		</div>
+		<div class="official">
+			<p>
+				进好店是北京三五三六网络科技有限公司旗下的一套全国领先的微信营销工具，所创新的支持手机即做即发模式，大大提高商家使用便捷性，提高效率，得到一致认可，被业内同行争相模仿。
+			</p>
+			<p>
+				使用进好店软件，招生、吸客、引流、传播，不再是难题，轻松实现微信推广、朋友圈营销，使用砍价活动、拼团活动、助力活动等微信活动，实现推广效果。
+			</p>
+			<p>
+				进好店客户覆盖婚庆行业、会务行业、装饰装潢行业、传统媒体行业、房产地产行业、微商推广、传统企业、婚介交友、城市O2O、交通行业、美妆行业、快递行业、医疗行业、行业协会、互联网金融、股票证券、连锁行业、商业综合体、大型商超、商业地产、母婴亲子、摄影行业、学校教育、电商行业、名胜景区、在线旅游、体育运动、文化娱乐等近百个行业。
+			</p>
+			<p>
+				进好店合作客户主要包括包括：中国工商银行、肯德基、耐克、毛源昌眼镜、周大生珠宝、华雅国际大酒店、明牌首饰、老凤祥、中国珠宝、夏加尔美术、老庙黄金、佐卡伊珠宝、新东方教育、宝岛眼镜、新爱婴、奇迹健身、小荷作文、昂立教育、吉的堡、中国电信、中国联通、乐高、哈佛教育等上千个知名品牌及数万商家。
+			</p>
+			<p><span>进好店</span>：www.jinhaodian.com</p>
+			<p>联系电话：400-8696463</p>
+			<p>地址：北京市朝阳区锐创国际B座</p>
+		</div>
+
+		<footer>
+			<div class="">
+
+				<ul class="clearlr">
+					<li>
+						<p>
+							<span>7x12小时</span>
+							<span>售后服务</span>
+						</p>
+					</li>
+					<li>
+						<p>
+							<span>免费使用</span>
+							<span>0成本</span>
+						</p>
+					</li>
+					<li>
+						<p>
+							<span>数据采集</span>
+							<span>实时跟踪</span>
+						</p>
+					</li>
+					<li>
+						<p>
+							<span>手机电脑</span>
+							<span>均可操作</span>
+						</p>
+					</li>
+					<li>
+						<p>
+							<span>不限次数</span>
+							<span>每周更新</span>
+						</p>
+					</li>
+				</ul>
+				<div class="">
+					<img src="images/erweima.jpg" />
+				</div>
+				<div class="">
+					<p>&copy;2016-2017&nbsp;&nbsp;&nbsp;&nbsp;进好店 版权所有&nbsp;&nbsp;备案号：京ICP备16037555号-2</p>
+				</div>
+			</div>
+		</footer>
+
+		<script src="js/jquery-1.12.3.min.js" type="text/javascript" charset="utf-8"></script>
+		<script src="js/index.js" type="text/javascript" charset="utf-8"></script>
 	</body>
 
 </html>
