--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 		<header>
 			<nav class="clearlr">
 				<div class="logo">
-					<img src="images/logo.png" />
+					<img src="images/logo1.png" />
 				</div>
 				<div class="menu">
 					<span></span>
