--- a/productcenter.html
+++ b/productcenter.html
@@ -14,7 +14,7 @@
 		<header>
 			<nav class="clearlr">
 				<div class="logo">
-					<img src="images/logo.png" />
+					<img src="images/logo1.png" />
 				</div>
 				<div class="menu">
 					<span></span>
@@ -139,6 +139,12 @@
 
 		<!--		产品中心列表-->
 		<div class="activitys">
+			<p>
+				<a href="###">进好店</a>
+			</p>
+			<p>
+				进好店-营销活动
+			</p>
 			<ul>
 				<li class="clearlr">
 					<div>
@@ -226,6 +232,56 @@
 				</div>
 			</div>
 		</footer>
+		
+<!--		侧边栏-->
+		<slide>
+			<ul class="clearlr">
+				<li class="cli">
+					<div class="erwei">
+						<img src="images/weixin.png" />
+						<p>官方微信</p>
+						<img src="images/erweima.jpg" class="erweima" />
+					</div>
+				</li>
+				<li class="cli">
+					<div>
+						<img src="images/dianhua.png" />
+						<p>客服电话</p>
+						<p class="tanchu" /><span>400-8696463</span></p>
+					</div>
+				</li>
+				<li class="cli">
+					<div>
+						<a href="###">
+							<img src="images/qq.png" />
+							<span>QQ</span>
+
+						</a>
+						<p class="tanchu" /><span>2498908257</span></p>
+					</div>
+				</li>
+			</ul>
+			<!--<div class="">
+				<div class="cli">
+					<img src="images/weixin.png"/>
+					<p>官方微信</p>
+					<img src="images/erweima.jpg" class="erweima"/>
+				</div>
+				<div class="cli">
+					<img src="images/dianhua.png"/>
+					<p>客服电话</p>
+					<p class="tanchu"/><span>400-8696463</span></p>
+				</div>
+			</div>
+			<div class="cli">
+				<a href="###">
+					<img src="images/qq.png"/>
+					<span>QQ</span>
+					
+				</a>
+				<p class="tanchu"/><span>2498908257</span></p>
+			</div>-->
+		</slide>
 		<script src="js/jquery-1.12.3.min.js" type="text/javascript" charset="utf-8"></script>
 		<script src="js/index.js" type="text/javascript" charset="utf-8"></script>
 	</body>
