--- a/index.html
+++ b/index.html
@@ -515,7 +515,7 @@
 					<div>
 						<img src="images/dianhua.png" />
 						<p>客服电话</p>
-						<p class="tanchu" /><span>400-8696463</span></p>
+						<p class="tanchu" /><a href="tel:400-8696463"><span>400-8696463</span></a></p>
 					</div>
 				</li>
 				<li class="cli">
