--- a/index.html
+++ b/index.html
@@ -525,7 +525,7 @@
 							<span>QQ</span>
 
 						</a>
-						<p class="tanchu" /><span>2498908257</span></p>
+						<p class="tanchu" /><a target="_blank" href="http://wpa.qq.com/msgrd?v=1&uin=2498908257&site=qq&menu=yes"><span>2498908257</span></a></p>
 					</div>
 				</li>
 			</ul>
