--- a/index.html
+++ b/index.html
@@ -515,7 +515,7 @@
 					<div>
 						<img src="images/dianhua.png" />
 						<p>客服电话</p>
-						<p class="tanchu" /><a href="tel:400-8696463"><span>400-8696463</span></a></p>
+						<p class="tanchu" /><a href="tel:400-869-6463"><span>400-869-6463</span></a></p>
 					</div>
 				</li>
 				<li class="cli">
@@ -525,7 +525,7 @@
 							<span>QQ</span>
 
 						</a>
-						<p class="tanchu" /><a target="_blank" href="http://wpa.qq.com/msgrd?v=1&uin=2498908257&site=qq&menu=yes"><span>2498908257</span></a></p>
+						<p class="tanchu" /><a href="tencent://Message/?Uin=2498908257&websiteName=q-zone.qq.com&Menu=yes"><span>2498908257</span></a></p>
 					</div>
 				</li>
 			</ul>
