--- a/about.html
+++ b/about.html
@@ -102,7 +102,7 @@
 					</li>
 				</ul>
 				<div class="">
-					<img src="images/erweima.jpg" />
+					<img src="images/erweima.png" />
 				</div>
 				<div class="">
 					<p>&copy;2016-2017&nbsp;&nbsp;&nbsp;&nbsp;进好店 版权所有&nbsp;&nbsp;备案号：京ICP备16037555号-2</p>
@@ -116,7 +116,7 @@
 					<div class="erwei">
 						<img src="images/weixin.png" />
 						<p>官方微信</p>
-						<img src="images/erweima.jpg" class="erweima" />
+						<img src="images/erweima.png" class="erweima" />
 					</div>
 				</li>
 				<li class="cli">
