--- a/index.html
+++ b/index.html
@@ -493,7 +493,7 @@
 			</li>
 		</ul>
 		<div class="">
-			<img src="images/erweima.jpg" />
+			<img src="images/erweima.png" />
 		</div>
 		<div class="">
 			<p>&copy;2016-2017&nbsp;&nbsp;&nbsp;&nbsp;进好店 版权所有&nbsp;&nbsp;备案号：京ICP备16037555号-2</p>
@@ -508,7 +508,7 @@
 					<div class="erwei">
 						<img src="images/weixin.png" />
 						<p>官方微信</p>
-						<img src="images/erweima.jpg" class="erweima" />
+						<img src="images/erweima.png" class="erweima" />
 					</div>
 				</li>
 				<li class="cli">
@@ -524,7 +524,17 @@
 							<img src="images/qq.png" />
 							<span>QQ</span>
 						</a>
-						<p class="tanchu" /><a href="tencent://Message/?Uin=2498908257&websiteName=q-zone.qq.com&Menu=yes"><span>2498908257</span></a></p>
+						<!--<p class="tanchu" /><a href="tencent://Message/?Uin=2498908257&websiteName=q-zone.qq.com&Menu=yes"><span>2498908257</span></a></p>-->
+						<!--<p class="tanchu" /><a href="tencent://Message/?Uin=2498908257&websiteName=q- zone.qq.com &Menu=yes"><span>2498908257</span></a></p>-->
+						<!--<p class="tanchu">
+							<a href="http://wpa.qq.com/msgrd?v=3&uin=2498908257&site=qq&menu=yes"><span>2498908257</span></a>
+						</p>-->
+						<!--<p class="tanchu">
+							<a href="tencent://Message/?&uin=3313742512&site=qq&menu=yes"><span>2498908257</span></a>
+						</p>-->
+						<p class="tanchu">
+							<a href="tencent://Message/?&uin=2498908257&site=qq&menu=yes"><span>2498908257</span></a>
+						</p>
 					</div>
 				</li>
 			</ul>
