--- a/productcenter.html
+++ b/productcenter.html
@@ -164,7 +164,7 @@
 						</div>
 					</div>
 					<div>
-						<img src="images/erweima.jpg" />
+						<img src="images/erweima.png" />
 					</div>
 				</li>
 				<li class="clearlr">
@@ -184,7 +184,7 @@
 						</div>
 					</div>
 					<div>
-						<img src="images/erweima.jpg" />
+						<img src="images/erweima.png" />
 					</div>
 				</li>
 			</ul>
