--- a/productcenter.html
+++ b/productcenter.html
@@ -247,7 +247,7 @@
 					<div>
 						<img src="images/dianhua.png" />
 						<p>客服电话</p>
-						<p class="tanchu" /><span>400-8696463</span></p>
+						<p class="tanchu" /><a href="tel:400-869-6463"><span>400-869-6463</span></a></p>
 					</div>
 				</li>
 				<li class="cli">
@@ -255,9 +255,10 @@
 						<a href="###">
 							<img src="images/qq.png" />
 							<span>QQ</span>
-
 						</a>
-						<p class="tanchu" /><span>2498908257</span></p>
+						<p class="tanchu">
+							<a href="tencent://Message/?&uin=2498908257&site=qq&menu=yes"><span>2498908257</span></a>
+						</p>
 					</div>
 				</li>
 			</ul>
