--- a/about.html
+++ b/about.html
@@ -62,7 +62,7 @@
 				进好店合作客户主要包括包括：中国工商银行、肯德基、耐克、毛源昌眼镜、周大生珠宝、华雅国际大酒店、明牌首饰、老凤祥、中国珠宝、夏加尔美术、老庙黄金、佐卡伊珠宝、新东方教育、宝岛眼镜、新爱婴、奇迹健身、小荷作文、昂立教育、吉的堡、中国电信、中国联通、乐高、哈佛教育等上千个知名品牌及数万商家。
 			</p>
 			<p>进好店：www.jinhaodian.com</p>
-			<p>联系电话：400-8696463</p>
+			<p>联系电话：400-869-6463</p>
 			<p>地址：北京市朝阳区锐创国际B座</p>
 		</div>
 
