--- a/index.html
+++ b/index.html
@@ -37,8 +37,11 @@
 					<li>
 						<a href="about.html">关于我们</a>
 					</li>
-					<li>
-						<a href="">免费注册</a>
+					<li class="zhuceaaa">
+						<button>免费注册</button>
+						<p>
+							<img src="images/test.png"/>
+						</p>
 					</li>
 				</ul>
 			</nav>
@@ -530,26 +533,6 @@
 					</div>
 				</li>
 			</ul>
-			<!--<div class="">
-				<div class="cli">
-					<img src="images/weixin.png"/>
-					<p>官方微信</p>
-					<img src="images/erweima.jpg" class="erweima"/>
-				</div>
-				<div class="cli">
-					<img src="images/dianhua.png"/>
-					<p>客服电话</p>
-					<p class="tanchu"/><span>400-8696463</span></p>
-				</div>
-			</div>
-			<div class="cli">
-				<a href="###">
-					<img src="images/qq.png"/>
-					<span>QQ</span>
-					
-				</a>
-				<p class="tanchu"/><span>2498908257</span></p>
-			</div>-->
 		</slide>
 
 		<script src="js/jquery-1.12.3.min.js" type="text/javascript" charset="utf-8"></script>
