--- a/productcenter.html
+++ b/productcenter.html
@@ -37,8 +37,11 @@
 					<li>
 						<a href="about.html">关于我们</a>
 					</li>
-					<li>
-						<a href="">免费注册</a>
+					<li class="zhuceaaa">
+						<button>免费注册</button>
+						<p>
+							<img src="images/test.png"/>
+						</p>
 					</li>
 				</ul>
 			</nav>
