--- a/index.html
+++ b/index.html
@@ -44,7 +44,12 @@
 						</p>
 					</li>
 				</ul>
+				<p>
+					
+				</p>
 			</nav>
+			<img src="images/img1.jpg"/>
+			<a href="productcenter.html">产品中心 ></a>
 		</header>
 		<!--轮播	-->
 		<div class="banner">
@@ -507,11 +512,15 @@
 		<!--		侧边栏-->
 		<slide>
 			<ul class="clearlr">
-				<li class="cli">
+				<li class="cli one">
 					<div class="erwei">
 						<img src="images/weixin.png" />
 						<p>官方微信</p>
 						<img src="images/erweima.png" class="erweima" />
+						<img src="images/waper.jpg" class="wapim"/>
+						<p class="buzou">
+							<img src="images/tanchu02.jpg"/>
+						</p>
 					</div>
 				</li>
 				<li class="cli">
@@ -519,6 +528,7 @@
 						<img src="images/dianhua.png" />
 						<p>客服电话</p>
 						<p class="tanchu" /><a href="tel:400-869-6463"><span>400-869-6463</span></a></p>
+						
 					</div>
 				</li>
 				<li class="cli">
