--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
 				</p>
 			</nav>
 			<img src="images/img1.jpg"/>
-			<a href="productcenter.html">产品中心 ></a>
+			<!--<a href="productcenter.html">产品中心 ></a>-->
 		</header>
 		<!--轮播	-->
 		<div class="banner">
@@ -363,96 +363,6 @@
 							<img src="images/consociation/zuimeizhongguozi.png" />
 						</div>
 					</li>
-
-					<!--<li>
-						<div>
-							<img src="images/consociation/aiyuyoutong.png" />
-
-						</div>
-						<div>
-							<img src="images/consociation/angliguojijiaoyu.png" />
-						</div>
-					</li>
-					<li>
-						<div>
-							<img src="images/consociation/baodaoyanjing.png" />
-						</div>
-						<div>
-							<img src="images/consociation/hafoyingyu.png" />
-						</div>
-					</li>
-					<li>
-						<div>
-							<img src="images/consociation/haomenglaijiafang.png" />
-						</div>
-						<div>
-							<img src="images/consociation/huayaguojidajiudian.png" />
-						</div>
-					</li>
-					<li>
-						<div>
-							<img src="images/consociation/jidebaoshaoeryingyu.png" />
-						</div>
-						<div>
-							<img src="images/consociation/kendeji.png" />
-						</div>
-					</li>
-					<li>
-						<div>
-							<img src="images/consociation/laofengxiang.png" />
-						</div>
-						<div>
-							<img src="images/consociation/laomiaohuangjin.png" />
-						</div>
-					</li>
-					<li>
-						<div>
-							<img src="images/consociation/micao.png" />
-						</div>
-						<div>
-							<img src="images/consociation/mingpaizhubao.png" />
-						</div>
-					</li>
-					<li>
-						<div>
-							<img src="images/consociation/oupaichugui.png" />
-						</div>
-						<div>
-							<img src="images/consociation/qicaipaopao.png" />
-						</div>
-					</li>
-					<li>
-						<div>
-							<img src="images/consociation/suboer.png" />
-						</div>
-						<div>
-							<img src="images/consociation/xiajiaer.png" />
-						</div>
-					</li>
-					<li>
-						<div>
-							<img src="images/consociation/xiaohezuowen.png" />
-						</div>
-						<div>
-							<img src="images/consociation/xinaiying.png" />
-						</div>
-					</li>
-					<li>
-						<div>
-							<img src="images/consociation/xindongfang.png" />
-						</div>
-						<div>
-							<img src="images/consociation/youzhengchuxu.png" />
-						</div>
-					</li>
-					<li>
-						<div>
-							<img src="images/consociation/zhongguodianxing.png" />
-						</div>
-						<div>
-							<img src="images/consociation/zuimeizhongguozi.png" />
-						</div>
-					</li>-->
 				</ul>
 			</div>
 
