--- a/index.html
+++ b/index.html
@@ -433,12 +433,11 @@
 						</p>
 					</div>
 				</li>
-				<li class="cli">
+				<li class="cli two">
 					<div>
 						<img src="images/dianhua.png" />
 						<p>客服电话</p>
 						<p class="tanchu" /><a href="tel:400-869-6463"><span>400-869-6463</span></a></p>
-						
 					</div>
 				</li>
 				<li class="cli">
@@ -450,11 +449,29 @@
 						<p class="tanchu">
 							<a href="tencent://Message/?&uin=2498908257&site=qq&menu=yes"><span>2498908257</span></a>
 						</p>
+						
+					</div>
+				</li>
+				<li class="">
+					<div>
+						<p>
+							<a href="###">帮助</a>
+						</p>
 					</div>
 				</li>
 			</ul>
 		</slide>
-
+<!--		小弹窗-->
+		<div class="bigtan">
+			<div class="mobelcl">
+							<p>提示</p>
+							<p>确定拨打电话：400-869-6463  吗？</p>
+							<p>
+								<a href="###" class="quxiao">取消</a>
+								<a href="tel:400-869-6463">确定</a>
+							</p>
+						</div>
+		</div>
 		<script src="js/jquery-1.12.3.min.js" type="text/javascript" charset="utf-8"></script>
 		<script src="js/index.js" type="text/javascript" charset="utf-8"></script>
 	</body>
