--- a/index.html
+++ b/index.html
@@ -437,7 +437,7 @@
 					<div>
 						<img src="images/dianhua.png" />
 						<p>客服电话</p>
-						<p class="tanchu" /><a href="tel:400-869-6463"><span>400-869-6463</span></a></p>
+						<p class="tanchu" /><span>400-869-6463</span></p>
 					</div>
 				</li>
 				<li class="cli">
@@ -468,7 +468,7 @@
 							<p>确定拨打电话：400-869-6463  吗？</p>
 							<p>
 								<a href="###" class="quxiao">取消</a>
-								<a href="tel:400-869-6463">确定</a>
+								<a href="tel://400-869-6463">确定</a>
 							</p>
 						</div>
 		</div>
