--- a/index.html
+++ b/index.html
@@ -40,15 +40,15 @@
 					<li class="zhuceaaa">
 						<button>免费注册</button>
 						<p>
-							<img src="images/test.png"/>
+							<img src="images/test.png" />
 						</p>
 					</li>
 				</ul>
 				<p>
-					
+
 				</p>
 			</nav>
-			<img src="images/img1.jpg"/>
+			<img src="images/img1.jpg" />
 			<!--<a href="productcenter.html">产品中心 ></a>-->
 		</header>
 		<!--轮播	-->
@@ -376,48 +376,48 @@
 
 		<!--底部-->
 		<footer>
-	<div class="">
+			<div class="">
 
-		<ul class="clearlr">
-			<li>
-				<p>
-					<span>7x12小时</span>
-					<span>售后服务</span>
-				</p>
-			</li>
-			<li>
-				<p>
-					<span>免费使用</span>
-					<span>0成本</span>
-				</p>
-			</li>
-			<li>
-				<p>
-					<span>数据采集</span>
-					<span>实时跟踪</span>
-				</p>
-			</li>
-			<li>
-				<p>
-					<span>手机电脑</span>
-					<span>均可操作</span>
-				</p>
-			</li>
-			<li>
-				<p>
-					<span>不限次数</span>
-					<span>每周更新</span>
-				</p>
-			</li>
-		</ul>
-		<div class="">
-			<img src="images/erweima.png" />
-		</div>
-		<div class="">
-			<p>&copy;2016-2017&nbsp;&nbsp;&nbsp;&nbsp;进好店 版权所有&nbsp;&nbsp;备案号：京ICP备16037555号-2</p>
-		</div>
-	</div>
-</footer>
+				<ul class="clearlr">
+					<li>
+						<p>
+							<span>7x12小时</span>
+							<span>售后服务</span>
+						</p>
+					</li>
+					<li>
+						<p>
+							<span>免费使用</span>
+							<span>0成本</span>
+						</p>
+					</li>
+					<li>
+						<p>
+							<span>数据采集</span>
+							<span>实时跟踪</span>
+						</p>
+					</li>
+					<li>
+						<p>
+							<span>手机电脑</span>
+							<span>均可操作</span>
+						</p>
+					</li>
+					<li>
+						<p>
+							<span>不限次数</span>
+							<span>每周更新</span>
+						</p>
+					</li>
+				</ul>
+				<div class="">
+					<img src="images/erweima.png" />
+				</div>
+				<div class="">
+					<p>&copy;2016-2017&nbsp;&nbsp;&nbsp;&nbsp;进好店 版权所有&nbsp;&nbsp;备案号：京ICP备16037555号-2</p>
+				</div>
+			</div>
+		</footer>
 
 		<!--		侧边栏-->
 		<slide>
@@ -427,9 +427,9 @@
 						<img src="images/weixin.png" />
 						<p>官方微信</p>
 						<img src="images/erweima.png" class="erweima" />
-						<img src="images/waper.jpg" class="wapim"/>
+						<img src="images/waper.jpg" class="wapim" />
 						<p class="buzou">
-							<img src="images/tanchu02.jpg"/>
+							<img src="images/tanchu02.jpg" />
 						</p>
 					</div>
 				</li>
@@ -449,7 +449,7 @@
 						<p class="tanchu">
 							<a href="tencent://Message/?&uin=2498908257&site=qq&menu=yes"><span>2498908257</span></a>
 						</p>
-						
+
 					</div>
 				</li>
 				<li class="">
@@ -461,19 +461,25 @@
 				</li>
 			</ul>
 		</slide>
-<!--		小弹窗-->
+		<!--		小弹窗-->
 		<div class="bigtan">
 			<div class="mobelcl">
-							<p>提示</p>
-							<p>确定拨打电话：400-869-6463  吗？</p>
-							<p>
-								<a href="###" class="quxiao">取消</a>
-								<a href="tel//:400-869-6463">确定</a>
-							</p>
-						</div>
+				<p>提示</p>
+				<p>确定拨打电话：400-869-6463 吗？</p>
+				<p>
+					<a href="###" class="quxiao">取消</a>
+					<!--<a href="tel:400-869-6463">确定</a>-->
+					<a href="###" onclick=""callphone()"></a>
+				</p>
+			</div>
 		</div>
 		<script src="js/jquery-1.12.3.min.js" type="text/javascript" charset="utf-8"></script>
 		<script src="js/index.js" type="text/javascript" charset="utf-8"></script>
+		<script type="text/javascript">
+			function callphone(){    
+		        window.location.href = "tel:400-869-6463";
+		    }
+		</script>
 	</body>
 
 </html>
