--- a/index.html
+++ b/index.html
@@ -468,8 +468,8 @@
 				<p>确定拨打电话：400-869-6463 吗？</p>
 				<p>
 					<a href="###" class="quxiao">取消</a>
-					<!--<a href="tel:400-869-6463">确定</a>-->
-					<button onclick="callphone()">确定</button>
+					<a href="tel:400-869-6463">确定</a>
+					<!--<button onclick="callphone()">确定</button>-->
 				</p>
 			</div>
 		</div>
