--- a/index.html
+++ b/index.html
@@ -475,11 +475,11 @@
 		</div>
 		<script src="js/jquery-1.12.3.min.js" type="text/javascript" charset="utf-8"></script>
 		<script src="js/index.js" type="text/javascript" charset="utf-8"></script>
-		<script type="text/javascript">
+		<!--<script type="text/javascript">
 			function callphone(){    
 		        window.location.href = "tel:400-869-6463";
 		    }
-		</script>
+		</script>-->
 	</body>
 
 </html>
