--- a/index.html
+++ b/index.html
@@ -437,7 +437,7 @@
 					<div>
 						<img src="images/dianhua.png" />
 						<p>客服电话</p>
-						<p class="tanchu" /><span>400-869-6463</span></p>
+						<p class="tanchu" /><a href="tel://400-869-6463"><span>400-869-6463</span></a></p>
 					</div>
 				</li>
 				<li class="cli">
@@ -451,35 +451,30 @@
 						</p>
 
 					</div>
-				</li>
-				<li class="">
 					<div>
 						<p>
-							<a href="###">帮助</a>
+							<a href="###">咨询</a>
 						</p>
 					</div>
 				</li>
+				<!--<li class="">
+					
+				</li>-->
 			</ul>
 		</slide>
 		<!--		小弹窗-->
-		<div class="bigtan">
+		<!--<div class="bigtan">
 			<div class="mobelcl">
 				<p>提示</p>
 				<p>确定拨打电话：400-869-6463 吗？</p>
 				<p>
 					<a href="###" class="quxiao">取消</a>
 					<a href="tel://400-869-6463">确定</a>
-					<!--<button onclick="callphone()">确定</button>-->
 				</p>
 			</div>
-		</div>
+		</div>-->
 		<script src="js/jquery-1.12.3.min.js" type="text/javascript" charset="utf-8"></script>
 		<script src="js/index.js" type="text/javascript" charset="utf-8"></script>
-		<!--<script type="text/javascript">
-			function callphone(){    
-		        window.location.href = "tel:400-869-6463";
-		    }
-		</script>-->
 	</body>
 
 </html>
