--- a/index.html
+++ b/index.html
@@ -436,7 +436,7 @@
 				<li class="cli two">
 					<div>
 						<img src="images/dianhua.png" />
-						<p>客服电话</p>
+						<p><a href="tel://400-869-6463"></a>客服电话</p>
 						<p class="tanchu" /><a href="tel://400-869-6463"><span>400-869-6463</span></a></p>
 					</div>
 				</li>
