--- a/index.html
+++ b/index.html
@@ -436,7 +436,7 @@
 				<li class="cli two">
 					<div>
 						<img src="images/dianhua.png" />
-						<p><a href="tel://400-869-6463">客服电话</a></p>
+						<p>客服电话</p>
 						<p class="tanchu" /><a href="tel://400-869-6463"><span>400-869-6463</span></a></p>
 					</div>
 				</li>
@@ -463,7 +463,7 @@
 			</ul>
 		</slide>
 		<!--		小弹窗-->
-		<!--<div class="bigtan">
+		<div class="bigtan">
 			<div class="mobelcl">
 				<p>提示</p>
 				<p>确定拨打电话：400-869-6463 吗？</p>
@@ -472,7 +472,7 @@
 					<a href="tel://400-869-6463">确定</a>
 				</p>
 			</div>
-		</div>-->
+		</div>
 		<script src="js/jquery-1.12.3.min.js" type="text/javascript" charset="utf-8"></script>
 		<script src="js/index.js" type="text/javascript" charset="utf-8"></script>
 	</body>
