--- a/index.html
+++ b/index.html
@@ -442,9 +442,10 @@
 				</li>
 				<li class="cli">
 					<div>
-						<a href="###">
+						<a href="tencent://Message/?&uin=2498908257&site=qq&menu=yes">
 							<img src="images/qq.png" />
 							<span>QQ</span>
+							
 						</a>
 						<p class="tanchu">
 							<a href="tencent://Message/?&uin=2498908257&site=qq&menu=yes"><span>2498908257</span></a>
