--- a/index.html
+++ b/index.html
@@ -437,7 +437,7 @@
 					<div>
 						<img src="images/dianhua.png" />
 						<p>客服电话</p>
-						<p class="tanchu" /><a href="tel://400-869-6463"><span>400-869-6463</span></a></p>
+						<p class="tanchu" /><a href="tel:400-869-6463"><span>400-869-6463</span></a></p>
 					</div>
 				</li>
 				<li class="cli">
