--- a/index.html
+++ b/index.html
@@ -470,7 +470,7 @@
 				<p>确定拨打电话：400-869-6463 吗？</p>
 				<p>
 					<a href="###" class="quxiao">取消</a>
-					<a href="tel://400-869-6463">确定</a>
+					<a href="tel:400-869-6463">确定</a>
 				</p>
 			</div>
 		</div>
