--- a/index.html
+++ b/index.html
@@ -434,10 +434,16 @@
 					</div>
 				</li>
 				<li class="cli two">
-					<div>
+					<div class="three">
 						<img src="images/dianhua.png" />
 						<p>客服电话</p>
-						<p class="tanchu" /><a href="tel:400-869-6463"><span>400-869-6463</span></a></p>
+						<p class="tanchu"/><span>400-869-6463</span></p>
+					</div>
+					<div class="four">
+						<a href="tel:400-869-6463">
+							<img src="images/dianhua.png" />
+							客服电话
+						</a>
 					</div>
 				</li>
 				<li class="cli">
