--- a/index.html
+++ b/index.html
@@ -434,7 +434,7 @@
 					</div>
 				</li>
 				<li class="cli two">
-					<div class="three active">
+					<div class="three">
 						<img src="images/dianhua.png" />
 						<p>客服电话</p>
 						<p class="tanchu"/><span>400-869-6463</span></p>
