--- a/index.html
+++ b/index.html
@@ -442,13 +442,13 @@
 					<div class="four">
 						<a href="tel:400-869-6463">
 							<img src="images/dianhua.png" />
-							客服2电话
+							客服电话
 						</a>
 					</div>
 				</li>
 				<li class="cli">
 					<div>
-						<a href="tencent://Message/?&uin=2498908257&site=qq&menu=yes">
+						<a href="###">
 							<img src="images/qq.png" />
 							<span>QQ</span>
 							
